mac maprendering button layout issue

--- a/css/layout-local.css
+++ b/css/layout-local.css
@@ -1358,9 +1358,14 @@ div#socialSharing a span#linkedin:hover {
   margin-left: 0px !important;
   position: absolute;
   z-index: 999;
-  flex-wrap: nowrap !important
+  flex-wrap: wrap !important;
+  white-space: nowrap;
+  overflow: hidden;
 }
-
+.map-rendering-options .btn { 
+padding-left: .20rem !important;
+padding-right: .20rem !important;
+}
 .btn-whitesmoke {
   background-color: whitesmoke;
   padding: 3px;
